# async-arch-course

./: Dockerfile_task_tracker  README.md
auth_service/: pyproject.toml
auth_service/auth_service/: app.py  config.py  kafka.py  security.py
auth_service/auth_service/api/: __init__.py  auth_handler.py  user_handler.py
auth_service/auth_service/models/: user_models.py
design/src/: task_system_design.drawio  task_system_design_v1.drawio
libs/: pyproject.toml
libs/common/: auth.py  constants.py  helpers.py  models.py
libs/common/kafka/: events.py  models.py  serialization.py  topics.py
task_tracker/: pyproject.toml
task_tracker/task_tracker/: __init__.py  app.py  config.py  consumer.py  handler.py  models.py
