[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Alexander Lebedev <lebedev.alex.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^3.0.0"
fastapi = "^0.76.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
